# Merge-Bench-Builder

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  README_SFT.md  build_dataset.sh  build_dataset_50.sh  build_dataset_full.sh  build_dataset_reaper_100.sh  build_dataset_reaper_1000.sh  build_dataset_reaper_test.sh  build_dataset_small.sh  collect_merges.sh  collect_merges_small.sh  eval.py  eval_all_checkpoints.sh  eval_all_models.sh  plot_checkpoints.py  pyproject.toml  requirements_dataset_building.txt  requirements_train.txt  run_sft_experiments.sh  sft_train.py  test.py  train.py
.github/workflows/: ci.yml
dataset_build_scripts/: build_all_datasets.sh  build_dataset.sh  build_dataset_50.sh  build_dataset_c.sh  build_dataset_cpp.sh  build_dataset_csharp.sh  build_dataset_github_go.sh  build_dataset_github_go_1000.sh  build_dataset_github_javascript.sh  build_dataset_github_javascript_1000.sh  build_dataset_go.sh  build_dataset_javascript.sh  build_dataset_php.sh  build_dataset_python.sh  build_dataset_reaper_100.sh  build_dataset_reaper_1000.sh  build_dataset_reaper_java_1000.sh  build_dataset_reaper_java_1000_1200.sh  build_dataset_reaper_test.sh  build_dataset_ruby.sh  build_dataset_rust.sh  build_dataset_small.sh  build_dataset_typescript.sh
deepseek_sft/: example_0.txt  example_1.txt  results.csv
input_data/: repos_50.csv  repos_github_Go_0_1000.csv  repos_github_Go_0_1200.csv  repos_github_JavaScript_0_1200.csv  repos_github_Javascript_0_1000.csv  repos_github_Rust_0_1000.csv  repos_github_Typescript_0_1000.csv  repos_reaper.csv  repos_reaper_0_100.csv  repos_reaper_1000.csv  repos_reaper_1000_1200.csv  repos_reaper_1000_1500.csv  repos_reaper_C#_0_1000.csv  repos_reaper_C#_0_1200.csv  repos_reaper_C++_0_1000.csv  repos_reaper_C++_0_1200.csv  repos_reaper_C_0_1000.csv  repos_reaper_C_0_1200.csv  repos_reaper_PHP_0_1000.csv  repos_reaper_PHP_0_1200.csv  repos_reaper_Python_0_1000.csv  repos_reaper_Python_0_1200.csv  repos_reaper_Ruby_0_1000.csv  repos_reaper_Ruby_0_1200.csv  repos_small.csv
merges/repos_50/: all_merges.csv  conflict_files.csv  conflict_metrics.csv  merges.csv
merges/repos_50/merges/CXgamer/: MC-ticker.csv
merges/repos_50/merges/Complexible/: stardog-spring.csv
merges/repos_50/merges/EricssonResearch/: openwebrtc-android-sdk.csv
merges/repos_50/merges/GoogleCloudPlatform/: appengine-java-snippets.csv
merges/repos_50/merges/QuadFlask/: FloatingActionMenu.csv
merges/repos_50/merges/QuantumBadger/: RedReader.csv
merges/repos_small/: all_merges.csv  conflict_files.csv  conflict_metrics.csv  merges.csv
runpod/: rsync_fetch.sh  rsync_send.sh  runpodctl_send.sh  setup_runpod.sh
setup/: setup.sh
src/: build_dataset.py  deepseek_sft_data.py  download_github_repos.py  download_reaper_dataset.py  eval.py  extract_conflict_blocks.py  extract_conflict_files.py  find_merges.py  get_conflict_files.py  metrics_conflict_blocks.py  model_inference.py  prepare_sft_dataset.py  sample_reaper_dataset.py  sample_reaper_repos.py  train.py  utils.py  variables.py
src/scripts/: build-performance-table.sh  build_performance_table.sh  eval_all_checkpoints.sh
tables/: results_table.md  results_table.tex  results_table_sft.md  results_table_sft.tex
(+43 files in other folders)
